--- a/YourParking/WebContent/css/menu.css
+++ b/YourParking/WebContent/css/menu.css
@@ -5,11 +5,16 @@
     right: -250px; /* メニューが隠れる位置 */
     width: 250px;
     height: 100%;
-    background-color: #f3f3f3;
-    color: #f3f3f3;
-    transition: right 0.3s; /* アニメーション設定 */
+    background-color: #ACABDC;
+    color: black;
+    transition: right 0.3s; /* アニメーション設定 */]
+    z-index: 3;
+
 }
 
+#top_menu{
+	color: black;
+}
 #menu ul {
     list-style: none;
     padding: 0;
@@ -60,10 +65,17 @@
   width: 25px;
   height: 3px;
   margin: 5px 0;
-  background-color: #333;
+  background-color: black;
   transition: 0.4s;
 }
 
 #menu .cor {
 	color: #000;
+}
+
+.menu_font{
+	color:white;
+
+h1{
+	color:black;
 }
