--- a/YourParking/WebContent/css/parking.css
+++ b/YourParking/WebContent/css/parking.css
@@ -7,6 +7,24 @@
 }
 
 #map {
-	height: 400px;
-    width: 600px;
+	margin-left: 0;
+    margin-right: auto;
+    width: 40%;
+    height: 60%;
+    z-index:-1;
+    position:left;
+
 }
+ @media screen and (max-width:650px) {
+
+
+	#map {
+	margin-left: 0;
+    margin-right:0;
+    width: 100%;
+    height: 60%;
+    z-index:-1;
+    position:left;
+
+}
+	}
